--- a/index .html
+++ b/index .html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/hello.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
 <div class="comm">
@@ -33,9 +34,9 @@
 
 </div>
 <div class="button">
-    <button class="but1 butonstyle"> New Game</button>
-    <button class="but2 butonstyle">Roll Die</button>
-    <button class="but3 butonstyle">Hold</button>
+    <button class="but1 butonstyle"> <i class="fa-sharp fa-solid fa-rotate-right"></i> New Game</button>
+    <button class="but2 butonstyle"> <i class="fa-sharp fa-solid fa-dice"></i>Roll Die</button>
+    <button class="but3 butonstyle" ><i class="fa-sharp fa-solid fa-hand-holding-heart"></i>Hold</button>
     </div>
 
 <div class="center center1">
