--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/hello.css">
+    <link rel="stylesheet" href="hello.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
@@ -52,5 +52,5 @@ Enter</button>
 </div> -->
 </div>
 </body>
-<script src="/die.js" ></script>
+<script src="die.js" ></script>
 </html>
