--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="hello.css">
+  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
@@ -51,6 +52,15 @@
 Enter</button>
 </div> -->
 </div>
+<div class="timer">
+  <p class="time_diaplay">00:00</p>
+</div>
+<div class="time_slot_container">
+<h5 class="heading">Choose the time slot</h5> 
+<input type="number" class="num"> <br>
+<button class="start">START</button>
+</div>
 </body>
 <script src="die.js" ></script>
+
 </html>
